# rustycpp

./: .gitignore  CLAUDE.md  CONTROL_FLOW_LIMITATIONS.md  Cargo.toml  IGNORED_TESTS.md  INTEGRATION.md  README.md  REFERENCE_CHECKING.md  RELEASE.md  TEST_SUMMARY.md  borrow.h  build.rs  build_release.sh  install.sh  ref_cell.h  run_tests.sh  test.sh  test_conditional_move.cpp  test_individual_annotations.cpp  test_move_debug.cpp  test_move_declared.cpp  test_namespace_safe.cpp  test_raii_problem.cpp  test_raii_simple.cpp  test_simple_loop.cpp  test_unsafe_manual.cpp  test_unsafe_simple.cpp  test_while.cpp  test_while_move.cpp  test_while_simple.cpp
.cargo/: config.toml
cmake/: CppBorrowChecker.cmake  README.md  RustyCppSubmodule.cmake
docs/: CONTROL_FLOW_FIX_SUMMARY.md  FIXING_CONTROL_FLOW.md  SUBMODULE_INTEGRATION.md
examples/: control_flow_limitations.cpp  debug_const_refs.cpp  debug_mixed_refs.cpp  debug_refs.cpp  lifetime_demo.cpp  lifetime_demo.h  lifetime_test.h  raii_examples.cpp  rc.cpp  reference_demo.cpp  rusty_idiomatic_demo.cpp  rusty_types_demo.cpp  safe_file_example.cpp  safe_unsafe_demo.cpp  safe_unsafe_simple.cpp  safety_annotation_demo.cpp  safety_annotations_demo.cpp  scope_fix_demo.cpp  simple_const_ref_example.cpp  simple_cross_file.cpp  simple_header.h  simple_lifetime_test.cpp  simple_rusty_demo.cpp  simple_safety_demo.cpp  simple_test.cpp  string_utils.h  test_control_flow_bugs.cpp  test_cross_file.cpp  test_dangling.cpp  test_debug.cpp  test_debug_move.cpp  test_each_control_flow.cpp  test_lifetimes.cpp  test_loop_simple.cpp  test_references.cpp  test_rusty_move.cpp  test_rusty_safety.cpp  test_scope_tracking.cpp  test_simple_move.cpp  test_simple_refs.cpp  (+10 more)
examples/cmake_project/: .gitignore  CMakeLists.txt
examples/cmake_project/include/: safe_string.h
examples/cmake_project/src/: main.cpp  memory_manager.cpp  safe_string.cpp  simple_demo.cpp  utils.cpp
examples/include_test/: compile_commands.json
examples/include_test/include/: math_utils.h
examples/include_test/src/: local_header.h  main.cpp  test_env.cpp
examples/submodule_project/: CMakeLists.txt  setup.sh
include/rusty/: README.md  arc.hpp  box.hpp  btreemap.hpp  btreeset.hpp  hashmap.hpp  hashset.hpp  option.hpp  rc.hpp  result.hpp  rusty.hpp  std_minimal.hpp  string.hpp  vec.hpp
src/: arc.hpp  main.rs  rc.hpp  refcell.hpp  rsptr.hpp  utils.hpp
src/analysis/: borrows.rs  lifetime_checker.rs  lifetime_inference.rs  lifetimes.rs  mod.rs  ownership.rs  pointer_safety.rs  scope_aware.rs  scope_lifetime.rs  unsafe_propagation.rs
src/diagnostics/: mod.rs
src/ir/: mod.rs
src/parser/: annotations.rs  ast_visitor.rs  block_scope_tracker.rs  header_cache.rs  mod.rs  safety_annotations.rs  unsafe_scanner.rs
src/solver/: mod.rs
tests/: integration_test.rs  run_rusty_tests.sh  rusty_arc_test.cpp  rusty_box_test.cpp  rusty_option_test.cpp  rusty_rc_test.cpp  rusty_result_test.cpp  rusty_vec_test.cpp  test_conditionals.rs  test_loops.rs  test_pointer_safety.rs  test_refcell.cpp  test_safe_unsafe.rs  test_scope_tracking.rs  test_std_move.rs  test_unsafe_blocks.rs  test_unsafe_comment_blocks.rs  test_unsafe_propagation.rs
