[package]
name = "cpp-borrow-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clang = "2.0.0"
clang-sys = "1.8.1"
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
miette = "7.6.0"
once_cell = "1.21.3"
petgraph = "0.8.2"
rayon = "1.10.0"
serde = "1.0.219"
serde_json = "1.0.142"
z3 = "0.12"

[dev-dependencies]
tempfile = "3.20.0"
